[tool.poetry]
name = "arbiter"
version = "0.1.0"
description = "A Trustworthy AI Decision Support System for Evidence-Based Claim Verification"
authors = ["Piyush Gupta <piyush@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = "^2.0.30"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
structlog = "^24.2.0"
hydra-core = "^1.3.2"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
transformers = "^4.41.0"
sentence-transformers = "^3.0.0"
faiss-cpu = "^1.8.0"
rank-bm25 = "^0.2.2"
xgboost = "^2.0.3"
wandb = "^0.17.0"
boto3 = "^1.43.51"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
isort = "^5.13.2"
mypy = "^1.10.0"
ruff = "^0.4.9"
pre-commit = "^3.7.1"
boto3-stubs = {extras = ["essential"], version = "^1.43.51"}

[tool.poetry.group.test.dependencies]
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

